--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^7.3.1",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.22"
   }
 }
