--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "users": "node ./models/data/users.js",
+    "authors": "node ./models/data/authors.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
